# rust-crashpad

./: .gitmodules  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yaml
crashpad/: Cargo.toml  README.md
crashpad-examples/: Cargo.toml
crashpad-examples/src/: main.rs
crashpad-sys/: Cargo.toml  README.md  build.rs
crashpad-sys/src/: lib.rs
crashpad-sys/wrapper/: lib.cc  lib.h
crashpad/src/: error.rs  lib.rs
examples/: Cargo.toml
examples/01-minimal/: Cargo.toml
examples/01-minimal/src/: main.rs
examples/02-various-crashes/: Cargo.toml  build.rs
examples/02-various-crashes/c/: lib.c  lib.h
examples/02-various-crashes/src/: main.rs
