[package]
name = "crashpad"
version = "0.1.1"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "Rust wrapper for Crashpad."
homepage = "https://github.com/yangby-cryptape/rust-crashpad"
repository = "https://github.com/yangby-cryptape/rust-crashpad"
keywords = ["crashpad"]
categories = ["development-tools::debugging"]
license = "Apache-2.0"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
crashpad-sys = { version = "0.1.1", path = "../crashpad-sys" }
log = "0.4.14"
thiserror = "1.0.29"
which = "4.2.2"
tempfile = "3.2.0"
libc = "0.2.101"

[dev-dependencies]
env_logger = "0.9.0"

[features]
with-precompiled = ["crashpad-sys/with-precompiled"]
