[package]
name = "crashpad-example-minimal"
version = "0.1.2"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "The minimal example of Crashpad."
homepage = "https://github.com/yangby-cryptape/rust-crashpad"
repository = "https://github.com/yangby-cryptape/rust-crashpad"

[dependencies]
crashpad = { version = "0.1.2", path = "../../crashpad", features = ["with-precompiled"] }
